# OpenTLD

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  OpenTLD.sln  README  README.md  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  parameters.yml
include/: TLD.h  videoInput.h
lib/: nss_toolkit.lib  videoInput.lib
src/: 4kbu22rn.d00  ALL_BUILD.vcxproj  CMakeLists.txt  FerNNClassifier.cpp  INSTALL.vcxproj  LKTracker.vcxproj  TEST.txt  TLD.cpp  TLD.sln  ZERO_CHECK.vcxproj  ferNN.vcxproj  ffmpegDecode.cpp  ffmpegDecode.h  fz1joke5.zud  kernel.cu  kernel.h  opentld.vcxproj  opentld.vcxproj.filters  run_tld.cpp  run_tld.vcxproj  tld.vcxproj  tld_utils.vcxproj  visca.h  vsica.cpp
src/config/: INSTALL.vcxproj  INSTALL.vcxproj.filters  config.vcxproj  config.vcxproj.filters
src/cvblobs/: CMakeLists.txt  INSTALL.vcxproj  cvblobs.vcxproj  cvblobs.vcxproj.filters
src/imacq/: CMakeLists.txt  INSTALL.vcxproj  imAcq.cpp  imAcq.h  imacq.vcxproj  imacq.vcxproj.filters
src/main/: CMakeLists.txt  INSTALL.vcxproj  main.vcxproj  main.vcxproj.filters
src/mftracker/: CMakeLists.txt  INSTALL.vcxproj  mftracker.vcxproj  mftracker.vcxproj.filters
src/tld/: CMakeLists.txt  INSTALL.vcxproj  TLD.cpp  tld.vcxproj  tld.vcxproj.filters
